# C-Rendering

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
resources/: game-objects.json
src/: main.c
src/core/file-system/: file-system.c  file-system.h
src/core/rendering/: rendering.c  rendering.h
src/core/system/: system.c  system.h
